<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Layout2"
    android:background="@drawable/img_ferrari"
    >


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="160dp"
        android:text="@string/Buy" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/LogoFerrari"
        app:srcCompat="@drawable/logo_ferrari" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/NewModelLaunch"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Tech"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textSize="30dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="600dp"/>


</FrameLayout
   >